# zeiss

./: CMakeLists.txt  README.md
Receive/: XCOM.ods
Receive/Transmission1/: CHAN1_asci.txt  CHAN1_hex.txt  CHAN2_ascii.txt  CHAN2_hex.txt  HelloTransfer.ods  Session 0.sal  received_file.txt
Receive/Transmission2/: .~lock.Communication.ods#  CHAN1ascii.txt  CHAN1hex.txt  CHAN2ascii.txt  CHAN2hex.txt  Communication.ods  Session 0.sal  received_file.txt
Receive/Transmission3/: .~lock.CH2ASCI.txt#  .~lock.MediumTrans.ods#  CH1ASCI.txt  CH1HEX.txt  CH2ASCI.txt  CH2HEX.txt  MediumCapture.sal  MediumTrans.ods  medium.txt
Send/: Hello.txt
include/: exs.hpp  xmodem_const.hpp
interfaces/: IClock.hpp  Iexs.hpp
src/: example.cpp  exs.cpp  main.cpp
system_tests/: my_tester.sh  received_file.txt  receiver.py  receiver.sh
tests/: CMakeLists.txt  test_example.cpp  test_exs.cpp
tests/test_data/: big.txt
